--- a/src/pages/UserShow/UserShow.css
+++ b/src/pages/UserShow/UserShow.css
@@ -77,3 +77,18 @@
     }
   }
   
+
+        {/* Search Button  */}
+        .search-container {
+          margin: 20px 0;
+          text-align: center;
+        }
+        
+        .search-Input {
+          padding: 10px;
+          width: 300px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          font-size: 16px;
+        }
+        
